--- a/index.html
+++ b/index.html
@@ -320,9 +320,8 @@
   <!-- Carousel -->
   <div class="carousel" aria-label="Cake Cart Images">
     <div class="carousel-inner" id="carouselInner">
-      <img src="cake-cart1.png" alt="Elegant white cake cart view 1" />
-      <img src="cake-cart2.png" alt="Elegant white cake cart view 2" />
-      <img src="cake-cart3.png" alt="Elegant white cake cart view 3" />
+      <img src="cake-cart.png" alt="Elegant white cake cart view 1" />
+      <img src="CatalogueCakeCart.png" alt="Catalogue Cake Cart" />
     </div>
     <button class="carousel-btn prev" aria-label="Previous Image">&#10094;</button>
     <button class="carousel-btn next" aria-label="Next Image">&#10095;</button>
