--- a/index.html
+++ b/index.html
@@ -372,6 +372,10 @@
       </div>
     </div>
   </section>
+  <section id="contact-info" style="text-align:center; margin-top:20px; font-size:1rem; color: var(--dark-text);">
+  <p>Based in Johannesburg, South Africa</p>
+  <p>Delivery fees will apply, collection also available from premises</p>
+</section>
 </main>
 
 <!-- VIP / WhatsApp Modal -->
