--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Oh My Nosh</title>
   <style>
     :root {
-      --dusty-rose: #c08081;
-      --sage-green: #9ba997;
+      --dusty-rose: #FFEFEF;
+      --sage-green: #FFEFEF;
       --cream: #f9f6f2;
       --dark-text: #4b4b3f;
       --light-text: #ffffff;
