--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     :root {
       --dusty-rose: #FFEFEF;
-      --sage-green: #FFEFEF;
+      --sage-green: #9ba997;
       --cream: #f9f6f2;
       --dark-text: #4b4b3f;
       --light-text: #ffffff;
