--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       line-height: 1.6;
       padding: 10px;
     }
-    a { color: var(--dusty-rose); text-decoration: none; transition: color 0.3s ease; }
-    a:hover { color: var(--sage-green); }
+    a { color: var(--sage-green); text-decoration: none; transition: color 0.3s ease; }
+    a:hover { color: var(--dusty-rose); }
     header {
-      background-color: var(--sage-green);
+      background-color: var(--dusty-rose);
       padding: 20px 0 10px;
       text-align: center;
       box-shadow: 0 4px 6px rgba(0,0,0,0.1);
@@ -66,7 +66,7 @@
       flex-direction: column;
       align-items: center;
       font-family: 'Georgia', serif;
-      color: var(--dusty-rose);
+      color: var(--sage-green);
       font-weight: 600;
       cursor: pointer;
       user-select: none;
@@ -95,7 +95,7 @@
     section { margin-bottom: 60px; }
     h1, h2 {
       font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
-      color: var(--dusty-rose);
+      color: var(--sage-green);
       margin-bottom: 15px;
       font-weight: normal;
     }
@@ -128,7 +128,7 @@
     /* Cake Cart Section */
     #cake-cart-section {
       background-color: var(--light-text);
-      border: 2px solid var(--dusty-rose);
+      border: 2px solid var(--sage-green);
       border-radius: 15px;
       padding: 20px;
       margin-bottom: 60px;
@@ -136,7 +136,7 @@
       box-shadow: 0 6px 18px rgba(192, 128, 129, 0.3);
       position: relative;
     }
-    #cake-cart-section h2 { color: var(--dusty-rose); font-size: 2rem; margin-bottom: 10px; }
+    #cake-cart-section h2 { color: var(--sage-green); font-size: 2rem; margin-bottom: 10px; }
 
     /* Carousel */
     .carousel {
@@ -196,7 +196,7 @@
     }
 
     #join-vip-btn {
-      background-color: var(--dusty-rose);
+      background-color: var(--sage-green);
       color: var(--light-text);
       padding: 12px 28px;
       border: none;
@@ -233,7 +233,8 @@
       box-shadow: 0 8px 22px rgba(192, 128, 129, 0.4);
       position: relative;
     }
-    .modal h3 { margin-bottom: 20px; color: var(--dusty-rose); font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif; text-align: center; }
+    .modal h3 { margin-bottom: 20px; color: var(--dusty-rose
+                                               ); font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif; text-align: center; }
     .modal form label { font-weight: 600; margin-bottom: 6px; display: block; }
     .modal form input, .modal form select, .modal form textarea {
       width: 100%;
