--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
     }
     .modal form input:focus, .modal form select:focus, .modal form textarea:focus {
       outline: none;
-      border-color: var(--dusty-rose);
-      box-shadow: 0 0 8px var(--dusty-rose);
+      border-color: var(--sage-green);
+      box-shadow: 0 0 8px var(--sage-green);
     }
     .modal form button {
-      background-color: var(--dusty-rose);
+      background-color: var(--sage-green);
       color: var(--light-text);
       font-weight: 700;
       padding: 14px 30px;
@@ -274,11 +274,11 @@
         right: 18px;
         font-size: 24px;
         font-weight: 700;
-        color: var(--dusty-rose);
+        color: var(--sage-green);
         cursor: pointer;
         user-select: none;
       }
-      .modal .close-btn:focus { outline: 2px solid var(--dusty-rose); }
+      .modal .close-btn:focus { outline: 2px solid var(--sage-green); }
 
       /* Responsive */
       @media (max-width: 600px) {
