--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       box-shadow: 0 8px 22px rgba(192, 128, 129, 0.4);
       position: relative;
     }
-    .modal h3 { margin-bottom: 20px; color: var(--dusty-rose
+    .modal h3 { margin-bottom: 20px; color: var(--sage-green
                                                ); font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif; text-align: center; }
     .modal form label { font-weight: 600; margin-bottom: 6px; display: block; }
     .modal form input, .modal form select, .modal form textarea {
@@ -500,7 +500,7 @@ window.addEventListener("DOMContentLoaded", () => {
     const inputs = dynamicFields.querySelectorAll("input, select, textarea");
     inputs.forEach(i=>details += `${i.previousElementSibling.textContent}: ${i.value}\n`);
     const message = `Hello! I would like to enquire about ${type}.\n${details}`;
-    window.open(`https://wa.me/27721234567?text=${encodeURIComponent(message)}`, "_blank");
+    window.open(`https://wa.me/27799750908?text=${encodeURIComponent(message)}`, "_blank");
   });
 
   // Carousel JS
