--- a/index.html
+++ b/index.html
@@ -322,6 +322,12 @@
   <div class="carousel" aria-label="Cake Cart Images">
     <div class="carousel-inner" id="carouselInner">
       <img src="cake-cart.png" alt="Elegant white cake cart view 1" />
+      <img src="cake-cart2.png" alt="Elegant white cake cart view 2" />
+      <img src="cake-cart3.png" alt="Elegant white cake cart view 3" />
+      <img src="cake-cart4.png" alt="Elegant white cake cart view 4" />
+      <img src="cake-cart5.png" alt="Elegant white cake cart view 5" />
+      <img src="cake-cart6.png" alt="Elegant white cake cart view 6" />
+      <img src="cake-cart7.png" alt="Elegant white cake cart view 7" />     
       <img src="CatalogueCakeCart.png" alt="Catalogue Cake Cart" />
     </div>
     <button class="carousel-btn prev" aria-label="Previous Image">&#10094;</button>
