--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
       --light-text: #ffffff;
     }
     * { margin: 0; padding: 0; box-sizing: border-box; }
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B4PP7QY7N8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B4PP7QY7N8');
+</script>
     body {
       font-family: 'Georgia', serif;
       background-color: var(--cream);
